--- a/familytree/templates/familytree/view_details.html
+++ b/familytree/templates/familytree/view_details.html
@@ -99,9 +99,9 @@
             </div>
           {% endif %}
         </div>
-        <div class="d-flex justify-content-end mt-1">
-          <a href="{% url 'classic_tree_view' pov_id %}" class="btn btn-secondary" aria-label="Go Back">Family view</a>
-          <a href="{% url 'family_view' pov_id %}" class="btn btn-secondary" aria-label="Go Back">Focus</a>
+        <div class="d-flex justify-content-end mt-1 button-container">
+          <a href="{% url 'classic_tree_view' pov_id %}" class="btn" aria-label="Go Back">Family view</a>
+          <a href="{% url 'family_view' pov_id %}" class="btn" aria-label="Go Back">Focused view</a>
         </div>
         
       </div>
