Add description for button

--- a/familytree/templates/familytree/family_view.html
+++ b/familytree/templates/familytree/family_view.html
@@ -20,8 +20,10 @@
       </div>
 
       <div class="d-flex justify-content-center mb-4">
-        <div class="dropdown">
+        <div class="dropdown d-flex justify-content-center flex-column">
+          <p>Want to see your family? Just hit the button!</p>
           <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Select relationship</button>
+          
           <ul class="dropdown-menu">
             <li>
               <button class="dropdown-item" data-value="parents">Parents</button>
