--- a/static/css/familytree/_person_card.css
+++ b/static/css/familytree/_person_card.css
@@ -51,8 +51,8 @@
 
 
 .profile-image {
-  max-width: 100px;
-  max-height: 100px;
+  width: 100px;
+  height: 100px;
   border-radius: 50%;
   object-fit: cover;
   margin-bottom: 1rem;
