--- a/familytree/templates/familytree/family_view.html
+++ b/familytree/templates/familytree/family_view.html
@@ -23,12 +23,15 @@
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="tutorialModalLabel">How does this work?</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">This page allows you to explore and manage your family tree in an interactive way.
           <br>
           <br>
           - View your relationships: Once registered, you can view your direct relationships such as parents, siblings, partners, and children. Use the dropdown menu to choose which group of relatives you want to see.
+          <br>
+          <br>
+          - You can switch perspectives: By clicking "Focus" on a person, you can view their family tree from their point of view. This allows you to see how they are related to you and others in the family.
           <br>
           <br>
           - Add family members: Each section gives you the option to add more people by clicking the plus (+) icon.
