--- a/static/css/familytree/entire_view.css
+++ b/static/css/familytree/entire_view.css
@@ -36,6 +36,18 @@ h3 {
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
 }
 
+.modalButton {
+    font-size: 1.1rem;
+    color: white;
+    background-color: black;
+}
+
+/* Disable Bootstraps default Hover animation */
+.modalButton:hover {
+    color: white;
+    background-color: black;
+}
+
 .tree-level {
     display: flex;
     flex-direction: column;
