--- a/familytree/templates/familytree/view_details.html
+++ b/familytree/templates/familytree/view_details.html
@@ -5,12 +5,14 @@
 {% endblock %}
 {% block extra_css %}
   <link rel="stylesheet" href="{% static 'css/familytree/view_details.css' %}" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" />
 {% endblock %}
 
 {% block content %}
   <div class="detail-container">
     {% if person %}
       <div class="detail-card">
+        <a href="{% url 'edit_person' pov_id person.id %}" class="edit-icon" aria-label="Edit Person"><i class="bi bi-pencil"></i></a>
         <div class="text-center mb-4">
           {% if 'placeholder' in person.featured_image.url %}
             <img class="detail-image" src="{% static 'images/user_default_images/default-image.webp' %}" alt="placeholder image" />
