--- a/staticfiles/css/familytree/entire_view.css
+++ b/staticfiles/css/familytree/entire_view.css
@@ -1,4 +1,3 @@
-
 body {
     background-image: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)),
         url('/static/images/backgrounds/familytree/background.webp');
@@ -35,6 +34,18 @@ h3 {
     text-align: center;
     margin-bottom: 30px;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+}
+
+.modalButton {
+    font-size: 1.1rem;
+    color: white;
+    background-color: black;
+}
+
+/* Disable Bootstraps default Hover animation */
+.modalButton:hover {
+    color: white;
+    background-color: black;
 }
 
 .tree-level {
@@ -135,6 +146,7 @@ h3 {
     font-weight: 600;
     padding: 4px 6px;
     border-radius: 8px;
+    align-self: center;
 }
 
 .person-actions .btn:hover {
@@ -151,6 +163,7 @@ h3 {
     opacity: 0.5;
     pointer-events: none;
 }
+
 @media (max-width: 768px) {
     h2 {
         font-size: 2rem;
