--- a/staticfiles/css/familytree/family_view.css
+++ b/staticfiles/css/familytree/family_view.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -15,6 +14,33 @@ h1,h2 {
     margin: 20px 0;
     font-family: 'Merriweather', serif;
     color: #ededed;
+}
+
+.modalButton {
+    font-size: 1.1rem;
+    color: white;
+    background-color: black;
+}
+
+/* Disable Bootstraps default Hover animation */
+.modalButton:hover {
+    color: white;
+    background-color: black;
+}
+
+.dropdown {
+    gap: 4px;
+}
+
+.dropdown-toggle {
+    width: fit-content;
+    align-self: center;
+}
+
+.dropdown>p{
+    color: #ededed;
+    font-family: 'Merriweather', serif;
+    font-size: 1rem;
 }
 
 .add-button{
